2006-09-08  Alexander Larsson  <alexl@redhat.com>

	* server/gam_connection.c: (gam_connection_close):
	Don't remove 0 source (from connection flush timeout fix)
	
	* server/gam_inotify.c: (gam_inotify_add_subscription):
	Add the sub to the listener so it will get freed with it
	
	* server/inotify-helper.c: (ih_sub_foreach_worker):
	Don't free sub_list items twice
	
	* server/inotify-sub.c: (ih_sub_get_filename):
	Actually get the filename

2006-09-05  Alexander Larsson  <alexl@redhat.com>

	* lib/gam_error.c:
	* libgamin/gam_api.c:
	* server/gam_connection.[ch]:
	* server/gam_server.[ch]:
	Don't use running timers for server idle timeout
	and debug signal handler.

2006-09-05  Alexander Larsson  <alexl@redhat.com>

	* server/gam_connection.c: 
	* server/gam_eq.[ch]:
	Only run connection flush timeout when needed.

2006-09-05  Alexander Larsson  <alexl@redhat.com>

	* server/gam_inotify.c: (gam_inotify_init):
	Install kernel monitoring hooks to fix previous commit.

2006-09-04  John McCutchan  <john@johnmccutchan.com>

	* server/Makefile.am:
	* server/gam_inotify.c: Ported to inotify-helper.
	* server/inotify-diag.c: inotify-helper debug output
	* server/inotify-helper.c: easy interface to inotify
	* server/inotify-kernel.c: kernel part of inotify-helper
	* server/inotify-missing.c: missing list part of inotify-helper
	* server/inotify-path.c: path based interface for inotify-kernel
	* server/inotify-sub.c: inotify-helper subscription
	* server/local_inotify.h: Updated to latest version
	* server/local_inotify_syscalls.h: Updated to latest version

	The above amounts to a complete replacement of gamin's inotify
	backend with the current gnome-vfs backend.

2006-08-28  Alexander Larsson  <alexl@redhat.com>

	* libgamin/gam_data.c: (gamin_data_reset):
	Empty read-buffer on connection reset.
	Patch from Ariel T. Glenn

2006-08-22  Alexander Larsson  <alexl@redhat.com>

	* libgamin/gam_fork.c: (gamin_fork_server):